<resources>
    <string name="app_name">EJ014-IntentEnvioRecepcion</string>

    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="title_activity_otra">OtraActivity</string>
    <string name="dni">DNI</string>
    <string name="obtener">Obtener</string>
    <string name="enviar">Enviar</string>
    <string name="no_disponible">No disponible</string>
</resources>
