<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:id="@+id/txtDNI"/>

        </android.support.design.widget.TextInputLayout>

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
         android:textStyle="bold"
        android:id="@+id/lblTituloNombre"
         android:layout_below="@+id/tilDNI"
         android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblNombre"
        android:text="@string/no_disponible"
        android:layout_below="@+id/lblTituloNombre"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:textStyle="bold"
        android:id="@+id/lblTituloEdad"
        android:layout_below="@+id/lblNombre"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblEdad"
        android:text="@string/no_disponible"
        android:layout_below="@+id/lblTituloEdad"
        android:textSize="20sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnObtener"
        android:layout_below="@+id/lblEdad"
        android:textSize="20sp"
        android:text="@string/obtener"/>



</RelativeLayout>
